# whisper-diarization-demo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  result.json
.github/workflows/: ci.yml
scripts/: download_models.py
src/whisper_diarization/: __init__.py  __main__.py  audio_processor.py  config.py  speaker_diarization.py  speech_recognition.py
src/whisper_diarization/utils/: __init__.py  formatters.py  logger.py
tests/: conftest.py  test_config.py  test_formatters.py
